--- a/static/md/i18n.md
+++ b/static/md/i18n.md
@@ -16,7 +16,7 @@
     <body id="app">
         <h1>{{ i18n.greeting }}, {{ i18n.username }}: {{ username }}</h1>
         <button @click="change" data-lang="zh">切換至中文</button>
-        <button @click="change" data-lang="zn">Switch to English</button>
+        <button @click="change" data-lang="en">Switch to English</button>
     </body>
     <script>
     const app = new QUI({
@@ -47,7 +47,7 @@
     <body id="app">
         <h1>你好, 用戶名: 帕登</h1>
         <button data-lang="zh">切換至中文</button>
-        <button data-lang="zn">Switch to English</button>
+        <button data-lang="en">Switch to English</button>
     </body>
     ```
 - result  `i18nLang = en`
@@ -55,6 +55,6 @@
     <body id="app">
         <h1>Hello, Username: 帕登</h1>
         <button data-lang="zh">切換至中文</button>
-        <button data-lang="zn">Switch to English</button>
+        <button data-lang="en">Switch to English</button>
     </body>
     ```
