介紹頁添加 `i18n`。

--- a/static/md/en/i18n.md
+++ b/static/md/en/i18n.md
@@ -1,8 +1,6 @@
-## 多國語言 (i18n)
-
 > [!NOTE]
-> 若為物件格式，直接配置多語言內容。
-> 若為字串格式，會透過 `fetch` 動態載入語言檔案。
+> If the format is an object, the multilingual content is directly configured.
+> If the format is a string, the language file is dynamically loaded via `fetch`.
 
 - en.json
     ```JSON
@@ -22,7 +20,7 @@
     const app = new QUI({
         id: "app",
         data: {
-            username: "帕登"
+            username: "Pardn"
         },
         i18n: {
             zh: {
@@ -31,7 +29,7 @@
             },
             en: "en.json",
         },
-        i18nLang: "zh | en", // 選擇顯示語言
+        i18nLang: "zh | en", // Select the displayed language
         event: {
             change: e => {
                 const _this = e.target;
@@ -45,7 +43,7 @@
 - result  `i18nLang = zh`
     ```html
     <body id="app">
-        <h1>你好, 用戶名: 帕登</h1>
+        <h1>你好, 用戶名: Pardn</h1>
         <button data-lang="zh">切換至中文</button>
         <button data-lang="en">Switch to English</button>
     </body>
@@ -53,7 +51,7 @@
 - result  `i18nLang = en`
     ```html
     <body id="app">
-        <h1>Hello, Username: 帕登</h1>
+        <h1>Hello, Username: Pardn</h1>
         <button data-lang="zh">切換至中文</button>
         <button data-lang="en">Switch to English</button>
     </body>
